@@ -12,7 +12,7 @@ $EM_CONF[$_EXTKEY] = Array (
 	'description' => 'Italian (it) language pack for the Static Info Tables providing localized names for countries, currencies and so on.',
 	'category' => 'misc',
 	'shy' => 0,
-	'version' => '6.2.2',
+	'version' => '6.3.1',
 	'priority' => '',
 	'loadOrder' => '',
 	'module' => '',
@@ -29,8 +29,8 @@ $EM_CONF[$_EXTKEY] = Array (
 	'CGLcompliance_note' => '',
 	'constraints' => array (
 		'depends' => array(
-			'typo3' => '6.2.0-7.0.99',
-			'static_info_tables' => '6.2.1-',
+			'typo3' => '6.1.0-7.99.99',
+			'static_info_tables' => '6.2.1-0.0.0',
 		),
 		'conflicts' => array(
 		),
