@@ -1,3 +1,7 @@
+2015-10-20  Franz Holzinger  <franz@ttproducts.de>
+	* update for static_info_tables 6.3.1 and TYPO3 6.2 and 7.99
+	* add documentation
+
 2015-09-02  Franz Holzinger  <franz@ttproducts.de>
 	* Add countries: CS, ME RS, JE, GG, IM, MF, BL, BQ, CWS, SX, SS
 	* Modify countries: AX
